[gd_scene load_steps=3 format=3 uid="uid://shudi8o1a2k2"]

[ext_resource type="Script" uid="uid://dhfo5cbwc2g4g" path="res://实验/粒子模拟游戏测试/main.gd" id="1_main"]
[ext_resource type="Script" uid="uid://cg75dlm1p3jv" path="res://实验/粒子模拟游戏测试/particle.gd" id="2_particle"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="ParticleSystem" type="Node2D" parent="."]
position = Vector2(0, 50)
script = ExtResource("2_particle")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_right = 800.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="SandButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 40.0
text = "沙子"

[node name="WaterButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 100.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 40.0
text = "水"

[node name="WallButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 190.0
offset_top = 10.0
offset_right = 270.0
offset_bottom = 40.0
text = "墙壁"

[node name="EraseButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 280.0
offset_top = 10.0
offset_right = 360.0
offset_bottom = 40.0
text = "橡皮擦"

[node name="CurrentTool" type="Label" parent="UI"]
layout_mode = 0
offset_left = 370.0
offset_top = 10.0
offset_right = 520.0
offset_bottom = 40.0
text = "当前工具: 沙子"
vertical_alignment = 1

[node name="SpeedLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 530.0
offset_top = 10.0
offset_right = 590.0
offset_bottom = 40.0
text = "速度:"
vertical_alignment = 1

[node name="SpeedSlider" type="HSlider" parent="UI"]
layout_mode = 0
offset_left = 590.0
offset_top = 15.0
offset_right = 790.0
offset_bottom = 35.0
min_value = 1.0
max_value = 5.0
value = 1.0
